--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
-        <div id="body" style="display: grid; align-items: center; align-self: center; height: 100vh; min-height: 500px;">
+        <div id="body" style="display: grid; align-items: center; align-self: center; height: 100vh; min-height: 500px; text-align: center;">
             <h1>404</h1>
             <a href="/">Back to home</a>
         </div>
