--- a/404.html
+++ b/404.html
@@ -21,12 +21,35 @@
                 height: 100vh;
                 min-height: 500px;
                 text-align: center;
+                padding: 100px;
             "
         >
             <div>
-                <h1>404</h1>
-                <a href="/">Back to home</a>
+                <h1
+                    style="
+                        font-size: 164px;
+                        margin: 0;
+                        color: rgb(220, 193, 166);
+                    "
+                >
+                    404
+                </h1>
+                <p style="font-size: 64px">
+                    Oops! Seems github pages is not supporting SPA well, please
+                    <a
+                        href="/"
+                        style="font-size: 64px; color: rgb(220, 193, 166); text-decoration: none;"
+                        >Visit home page</a
+                    >
+                    firstly, then PWA should help you with a nice user
+                    experience throughout my portfolio site!
+                </p>
             </div>
         </div>
     </body>
+    <style>
+        *{
+            box-sizing: border-box;
+        }
+    </style>
 </html>
