--- a/404.html
+++ b/404.html
@@ -35,11 +35,15 @@
                     404
                 </h1>
                 <p style="font-size: 64px">
-                    Oops! Seems github pages is not supporting SPA well, please
+                    Oops! Seems Github Pages is not supporting SPA well, please
                     <a
                         href="/"
-                        style="font-size: 64px; color: rgb(220, 193, 166); text-decoration: none;"
-                        >Visit home page</a
+                        style="
+                            font-size: 64px;
+                            color: rgb(220, 193, 166);
+                            text-decoration: none;
+                        "
+                        >visit the Home Page</a
                     >
                     firstly, then PWA should help you with a nice user
                     experience throughout my portfolio site!
@@ -48,7 +52,7 @@
         </div>
     </body>
     <style>
-        *{
+        * {
             box-sizing: border-box;
         }
     </style>
